Fix jumpiness through image height

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -58,6 +58,7 @@
 
     &__image {
         width: 100%;
+        height: auto;
         max-width: 340px;
         border-radius: 50%;
         border: 18px solid $white;
